k8s/s-rusun-adm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-rusun-adm
spec:
  selector:
    app: s-rusun-adm
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
