k8s/s-rusun-adm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s-rusun-adm-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /adm
        pathType: Prefix
        backend:
          service:
            name: s-rusun-adm
            port:
              number: 3001
